# solar-system

./: CMakeLists.txt  README.md
include/: CGALHandler.h  Planet.h  Renderable.h  Renderer.h  Sun.h  Widget.h  controls.h  renderUtility.h
include/glad/: glad.h
src/: Planet.cpp  Renderable.cpp  Renderer.cpp  Sun.cpp  Widget.cpp  controls.cpp  glad.c  main.cpp
